--- a/index.html
+++ b/index.html
@@ -761,10 +761,10 @@
 				<div class="tab_common">
 					<div class="tab_common__nuv">
 						<ul>
-							<li><a href="#" class="tab_common__nuv_active">Рекомендуемое</a></li>
-							<li><a href="#">Новое</a></li>
-							<li><a href="#">Вся библиотека</a></li>
-							<li><a href="#">Добавить свою активность</a></li>
+							<li><a href=".formation_ipr__recommended" class="tab_common__nuv_active">Рекомендуемое</a></li>
+							<li><a href=".formation_ipr__new">Новое</a></li>
+							<li><a href=".formation_ipr__library">Вся библиотека</a></li>
+							<li><a href=".formation_ipr__add_activity">Добавить свою активность</a></li>
 						</ul>
 					</div>
 					<div class="tab_common__content">
@@ -891,6 +891,415 @@
 								<div class="formation_ipr__filter__apply_wrp">
 									<button class="formation_ipr__filter__apply">Добавить выбранное в мой план развития</button>
 								</div>
+							</div>
+						</div>
+
+						<div class="formation_ipr__new">
+							<div class="formation_ipr__filters">
+								<div class="formation_ipr__filter">
+									<p>Выберите компетенцию</p>
+									<select name="choose_competention" data-placeholder="Все">
+										<option value="1">Стрессоустойчивость</option>
+										<option value="2">Лидерство как служение</option>
+										<option value="3">Энергия</option>
+										<option value="4">Работа в команде</option>
+										<option value="5">Гибкость и открытость изменений</option>
+										<option value="6">Преодоление себя</option>
+										<option value="7">Все</option>
+									</select>
+								</div>
+								<div class="formation_ipr__filter">
+									<p>Выберите тип инструмента</p>
+									<select name="choose_competention" data-placeholder="Все">
+										<option value="1">Книги</option>
+										<option value="2">Видео</option>
+										<option value="3">Тренинги</option>
+										<option value="4">Внешние мероприятия</option>
+										<option value="5">Коучинг</option>
+										<option value="6">Совместные проекты</option>
+										<option value="7">Все</option>
+									</select>
+								</div>
+								<div class="formation_ipr__filter__apply_wrp">
+									<button class="formation_ipr__filter__apply indigo_btn">Добавить выбранное в мой план развития</button>
+								</div>
+							</div>
+							<div class="formation_ipr__items">
+								<!-- item -->
+								<div class="formation_ipr__row">
+									<label class="formation_ipr__checkbox">
+										<input type="checkbox" name="checkbox" class="checkbox">
+										<span class="custom_checkbox"></span>
+									</label>
+									<div class="formation_ipr__item">
+										<div class="formation_ipr__img" style="background-image: url('img/боженька.png');">
+											<div class="formation_ipr__label bg_blue">
+												<img src="img/icons/open-book.png" alt="icon">
+											</div>
+										</div>
+										<div class="formation_ipr__name">
+											<span>Книга</span>
+											<h4><span>Айн Рэнд</span> Атлант расправил плечи</h4>
+											<p>Роман-антиутопия американской писательницы Айн Рэнд, впервые опубликованный в 1957 году. 
+											Является четвёртым и последним романом Рэнд, а также самым длинным. Рэнд считала его
+											главным произведением в своей литературной карьере.</p>
+										</div>
+									</div>
+								</div>
+								<!-- end item -->
+								<!-- item -->
+								<div class="formation_ipr__row">
+									<label class="formation_ipr__checkbox">
+										<input type="checkbox" name="checkbox" class="checkbox">
+										<span class="custom_checkbox"></span>
+									</label>
+									<div class="formation_ipr__item">
+										<div class="formation_ipr__img" style="background-image: url('img/нетю.png');">
+											<div class="formation_ipr__label bg_blue">
+												<img src="img/icons/open-book.png" alt="icon">
+											</div>
+										</div>
+										<div class="formation_ipr__name">
+											<span>Книга</span>
+											<h4><span>Айн Рэнд</span> Атлант расправил плечи</h4>
+											<p>Роман-антиутопия американской писательницы Айн Рэнд, впервые опубликованный в 1957 году. 
+											Является четвёртым и последним романом Рэнд, а также самым длинным. Рэнд считала его
+											главным произведением в своей литературной карьере.</p>
+										</div>
+									</div>
+								</div>
+								<!-- end item -->
+								<!-- item -->
+								<div class="formation_ipr__row">
+									<label class="formation_ipr__checkbox">
+										<input type="checkbox" name="checkbox" class="checkbox">
+										<span class="custom_checkbox"></span>
+									</label>
+									<div class="formation_ipr__item">
+										<div class="formation_ipr__img" style="background-image: url('img/нетю.png');">
+											<div class="formation_ipr__label bg_blue">
+												<img src="img/icons/open-book.png" alt="icon">
+											</div>
+										</div>
+										<div class="formation_ipr__name">
+											<span>Книга</span>
+											<h4><span>Айн Рэнд</span> Атлант расправил плечи</h4>
+											<p>Роман-антиутопия американской писательницы Айн Рэнд, впервые опубликованный в 1957 году. 
+											Является четвёртым и последним романом Рэнд, а также самым длинным. Рэнд считала его
+											главным произведением в своей литературной карьере.</p>
+										</div>
+									</div>
+								</div>
+								<!-- end item -->
+								<!-- item -->
+								<div class="formation_ipr__row">
+									<label class="formation_ipr__checkbox">
+										<input type="checkbox" name="checkbox" class="checkbox" checked>
+										<span class="custom_checkbox"></span>
+									</label>
+									<div class="formation_ipr__item">
+										<div class="formation_ipr__img" style="background-image: url('img/trening.png');">
+											<div class="formation_ipr__label bg_yellow">
+												<img src="img/icons/class-group.png" alt="icon">
+											</div>
+										</div>
+										<div class="formation_ipr__name">
+											<span>Внешнее мероприятие</span>
+											<h4><span>Организатор</span> Название мероприятия</h4>
+											<p>Роман-антиутопия американской писательницы Айн Рэнд, впервые опубликованный в 1957 году. 
+											Является четвёртым и последним романом Рэнд, а также самым длинным. Рэнд считала его
+											главным произведением в своей литературной карьере.</p>
+										</div>
+									</div>
+								</div>
+								<!-- end item -->
+								<div class="formation_ipr__filter__apply_wrp">
+									<button class="formation_ipr__filter__apply">Добавить выбранное в мой план развития</button>
+								</div>
+							</div>
+						</div>
+
+						<div class="formation_ipr__library">
+							<div class="formation_ipr__filters">
+								<div class="formation_ipr__filter">
+									<p>Выберите компетенцию</p>
+									<select name="choose_competention" data-placeholder="Все">
+										<option value="1">Стрессоустойчивость</option>
+										<option value="2">Лидерство как служение</option>
+										<option value="3">Энергия</option>
+										<option value="4">Работа в команде</option>
+										<option value="5">Гибкость и открытость изменений</option>
+										<option value="6">Преодоление себя</option>
+										<option value="7">Все</option>
+									</select>
+								</div>
+								<div class="formation_ipr__filter">
+									<p>Выберите тип инструмента</p>
+									<select name="choose_competention" data-placeholder="Все">
+										<option value="1">Книги</option>
+										<option value="2">Видео</option>
+										<option value="3">Тренинги</option>
+										<option value="4">Внешние мероприятия</option>
+										<option value="5">Коучинг</option>
+										<option value="6">Совместные проекты</option>
+										<option value="7">Все</option>
+									</select>
+								</div>
+								<div class="formation_ipr__filter__apply_wrp">
+									<button class="formation_ipr__filter__apply indigo_btn">Добавить выбранное в мой план развития</button>
+								</div>
+							</div>
+							<div class="formation_ipr__items">
+								<!-- item -->
+								<div class="formation_ipr__row">
+									<label class="formation_ipr__checkbox">
+										<input type="checkbox" name="checkbox" class="checkbox">
+										<span class="custom_checkbox"></span>
+									</label>
+									<div class="formation_ipr__item">
+										<div class="formation_ipr__img" style="background-image: url('img/боженька.png');">
+											<div class="formation_ipr__label bg_blue">
+												<img src="img/icons/open-book.png" alt="icon">
+											</div>
+										</div>
+										<div class="formation_ipr__name">
+											<span>Книга</span>
+											<h4><span>Айн Рэнд</span> Атлант расправил плечи</h4>
+											<p>Роман-антиутопия американской писательницы Айн Рэнд, впервые опубликованный в 1957 году. 
+											Является четвёртым и последним романом Рэнд, а также самым длинным. Рэнд считала его
+											главным произведением в своей литературной карьере.</p>
+										</div>
+									</div>
+								</div>
+								<!-- end item -->
+								<!-- item -->
+								<div class="formation_ipr__row">
+									<label class="formation_ipr__checkbox">
+										<input type="checkbox" name="checkbox" class="checkbox">
+										<span class="custom_checkbox"></span>
+									</label>
+									<div class="formation_ipr__item">
+										<div class="formation_ipr__img" style="background-image: url('img/нетю.png');">
+											<div class="formation_ipr__label bg_blue">
+												<img src="img/icons/open-book.png" alt="icon">
+											</div>
+										</div>
+										<div class="formation_ipr__name">
+											<span>Книга</span>
+											<h4><span>Айн Рэнд</span> Атлант расправил плечи</h4>
+											<p>Роман-антиутопия американской писательницы Айн Рэнд, впервые опубликованный в 1957 году. 
+											Является четвёртым и последним романом Рэнд, а также самым длинным. Рэнд считала его
+											главным произведением в своей литературной карьере.</p>
+										</div>
+									</div>
+								</div>
+								<!-- end item -->
+								<!-- item -->
+								<div class="formation_ipr__row">
+									<label class="formation_ipr__checkbox">
+										<input type="checkbox" name="checkbox" class="checkbox">
+										<span class="custom_checkbox"></span>
+									</label>
+									<div class="formation_ipr__item">
+										<div class="formation_ipr__img" style="background-image: url('img/нетю.png');">
+											<div class="formation_ipr__label bg_blue">
+												<img src="img/icons/open-book.png" alt="icon">
+											</div>
+										</div>
+										<div class="formation_ipr__name">
+											<span>Книга</span>
+											<h4><span>Айн Рэнд</span> Атлант расправил плечи</h4>
+											<p>Роман-антиутопия американской писательницы Айн Рэнд, впервые опубликованный в 1957 году. 
+											Является четвёртым и последним романом Рэнд, а также самым длинным. Рэнд считала его
+											главным произведением в своей литературной карьере.</p>
+										</div>
+									</div>
+								</div>
+								<!-- end item -->
+								<!-- item -->
+								<div class="formation_ipr__row">
+									<label class="formation_ipr__checkbox">
+										<input type="checkbox" name="checkbox" class="checkbox" checked>
+										<span class="custom_checkbox"></span>
+									</label>
+									<div class="formation_ipr__item">
+										<div class="formation_ipr__img" style="background-image: url('img/trening.png');">
+											<div class="formation_ipr__label bg_yellow">
+												<img src="img/icons/class-group.png" alt="icon">
+											</div>
+										</div>
+										<div class="formation_ipr__name">
+											<span>Внешнее мероприятие</span>
+											<h4><span>Организатор</span> Название мероприятия</h4>
+											<p>Роман-антиутопия американской писательницы Айн Рэнд, впервые опубликованный в 1957 году. 
+											Является четвёртым и последним романом Рэнд, а также самым длинным. Рэнд считала его
+											главным произведением в своей литературной карьере.</p>
+										</div>
+									</div>
+								</div>
+								<!-- end item -->
+								<div class="formation_ipr__filter__apply_wrp">
+									<button class="formation_ipr__filter__apply">Добавить выбранное в мой план развития</button>
+								</div>
+							</div>
+						</div>
+
+						<div class="formation_ipr__add_activity">
+							<div class="formation_ipr__filters">
+								<div class="formation_ipr__filter">
+									<p>Выберите компетенцию</p>
+									<div class="formation_ipr__filter_checkboxes">
+										<label class="formation_ipr__filter_checkbox">
+											<input type="checkbox" name="choose_competention" class="checkbox" checked>
+											<span class="custom_checkbox"></span>
+											<span class="name">Стрессоусточивость</span>
+										</label>
+										<label class="formation_ipr__filter_checkbox">
+											<input type="checkbox" name="choose_competention" class="checkbox" checked>
+											<span class="custom_checkbox"></span>
+											<span class="name">Энергия</span>
+										</label>
+										<label class="formation_ipr__filter_checkbox">
+											<input type="checkbox" name="choose_competention" class="checkbox" checked>
+											<span class="custom_checkbox"></span>
+											<span class="name">Работа в команде</span>
+										</label>
+										<label class="formation_ipr__filter_checkbox">
+											<input type="checkbox" name="choose_competention" class="checkbox">
+											<span class="custom_checkbox"></span>
+											<span class="name">Гибкость и открытость изменениям</span>
+										</label>
+										<label class="formation_ipr__filter_checkbox">
+											<input type="checkbox" name="choose_competention" class="checkbox">
+											<span class="custom_checkbox"></span>
+											<span class="name">Лидерство как служение</span>
+										</label>
+										<label class="formation_ipr__filter_checkbox">
+											<input type="checkbox" name="choose_competention" class="checkbox">
+											<span class="custom_checkbox"></span>
+											<span class="name">Лидерство как служение</span>
+										</label>
+									</div>
+								</div>
+								<div class="formation_ipr__filter">
+									<p>Выберите тип инструмента</p>
+									<select name="choose_competention" data-placeholder="Все">
+										<option value="1">Книги</option>
+										<option value="2">Видео</option>
+										<option value="3">Тренинги</option>
+										<option value="4">Внешние мероприятия</option>
+										<option value="5">Коучинг</option>
+										<option value="6">Совместные проекты</option>
+										<option value="7">Все</option>
+									</select>
+								</div>
+							</div>
+							<div class="formation_ipr__add_activity_table">
+								<table>
+									<thead>
+										<tr>
+											<th style="width: 731px;">Мероприятия</th>
+											<th>Дата начала</th>
+											<th>Дата завершения</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>
+												<label>
+													<input type="checkbox" name="event" class="checkbox" checked>
+													<span class="custom_checkbox"></span>
+													<span class="name">Тренинг «Управление изменениями. Часть 1»</span>
+												</label>
+											</td>
+											<td>
+												<select name="choose_competention">
+													<option value="1">26.03.2018</option>
+													<option value="2">15.03.2018</option>
+												</select>
+											</td>
+											<td>
+												<select name="choose_competention">
+													<option value="1">26.03.2018</option>
+													<option value="2">15.03.2018</option>
+												</select>
+											</td>
+										</tr>
+										<tr>
+											<td>
+												<label>
+													<input type="checkbox" name="event" class="checkbox" checked>
+													<span class="custom_checkbox"></span>
+													<span class="name">Регулярно запрашивайте обратную связь у Руководителя, коллег, Коуча по следующим критериям: - 
+													"Насколько им комфортно взаимодействовать со мной".- "Насколько убедительно (аргументировано,
+													приводя факты и проч.)мя отстаиваю свои идеи перед руководством, коллегами". - "Насколько точно
+													я доношу суть сообщения, структурирую свои мысли".</span>
+												</label>
+											</td>
+											<td>
+												<select name="choose_competention">
+													<option value="1">26.03.2018</option>
+													<option value="2">15.03.2018</option>
+												</select>
+											</td>
+											<td>
+												<select name="choose_competention">
+													<option value="1">26.03.2018</option>
+													<option value="2">15.03.2018</option>
+												</select>
+											</td>
+										</tr>
+										<tr>
+											<td>
+												<label>
+													<input type="checkbox" name="event" class="checkbox">
+													<span class="custom_checkbox"></span>
+													<span class="name">Тренинг «Управление изменениями. Часть 1»</span>
+												</label>
+											</td>
+											<td>
+												<select name="choose_competention">
+													<option value="1">26.03.2018</option>
+													<option value="2">15.03.2018</option>
+												</select>
+											</td>
+											<td>
+												<select name="choose_competention">
+													<option value="1">26.03.2018</option>
+													<option value="2">15.03.2018</option>
+												</select>
+											</td>
+										</tr>
+										<tr>
+											<td>
+												<label>
+													<input type="checkbox" name="event" class="checkbox">
+													<span class="custom_checkbox"></span>
+													<span class="name">Регулярно запрашивайте обратную связь у Руководителя, коллег, Коуча по следующим критериям: - 
+													"Насколько им комфортно взаимодействовать со мной".- "Насколько убедительно (аргументировано,
+													приводя факты и проч.)мя отстаиваю свои идеи перед руководством, коллегами". - "Насколько точно
+													я доношу суть сообщения, структурирую свои мысли".</span>
+												</label>
+											</td>
+											<td>
+												<select name="choose_competention">
+													<option value="1">26.03.2018</option>
+													<option value="2">15.03.2018</option>
+												</select>
+											</td>
+											<td>
+												<select name="choose_competention">
+													<option value="1">26.03.2018</option>
+													<option value="2">15.03.2018</option>
+												</select>
+											</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+							<div class="formation_ipr__add_activity__actions">
+								<button class="send_application">Подать заявку</button>
+								<button>Отменить</button>
 							</div>
 						</div>
 
