--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=1014">
 	<title>Document</title>
+	<link rel="stylesheet" href="libs/Datedropper3-master/datedropper.min.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -42,7 +43,7 @@
 							<ul>
 								<li>
 									<a href=".main_dinamic_active" class="tab_common__nuv_active">
-										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 512.001 512.001" style="enable-background:new 0 0 512.001 512.001;" xml:space="preserve" width="20">
+										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 512.001 512.001" style="enable-background:new 0 0 512.001 512.001;" xml:space="preserve" width="20px" height="19px">
 											<path d="M457.637,134.681c-29.976,0-54.363,24.387-54.363,54.363c0,10.933,3.255,21.114,8.831,29.647l-58.733,58.733    c-8.534-5.576-18.715-8.831-29.648-8.831c-11.329,0-21.858,3.488-30.576,9.441l-59.338-59.347    c5.575-8.533,8.828-18.713,8.828-29.644c0-29.976-24.387-54.363-54.363-54.363c-29.976,0-54.363,24.387-54.363,54.363    c0,10.931,3.254,21.108,8.827,29.641L84.004,277.42c-8.532-5.574-18.711-8.827-29.641-8.827C24.387,268.593,0,292.981,0,322.957    s24.387,54.363,54.363,54.363c29.976,0,54.363-24.387,54.363-54.363c0-10.933-3.255-21.114-8.831-29.648l58.733-58.733    c8.534,5.576,18.715,8.831,29.648,8.831c10.932,0,21.113-3.255,29.646-8.831l59.666,59.674    c-5.206,8.338-8.226,18.174-8.226,28.706c0,29.976,24.387,54.363,54.363,54.363s54.363-24.387,54.363-54.363    c0-10.931-3.254-21.109-8.827-29.641l58.736-58.736c8.533,5.574,18.712,8.827,29.641,8.827c29.976,0,54.363-24.387,54.363-54.363    C512.001,159.066,487.613,134.681,457.637,134.681z M54.363,354.849c-17.586,0-31.893-14.307-31.893-31.892    c0-17.586,14.307-31.893,31.893-31.893c17.585,0,31.893,14.307,31.893,31.893C86.256,340.542,71.949,354.849,54.363,354.849z     M188.276,220.936c-17.585,0-31.893-14.307-31.893-31.893c0-17.585,14.307-31.893,31.893-31.893    c17.586,0,31.893,14.307,31.893,31.893C220.169,206.629,205.862,220.936,188.276,220.936z M323.724,354.849    c-17.585,0-31.893-14.307-31.893-31.893s14.307-31.893,31.893-31.893c17.585,0,31.893,14.307,31.893,31.893    C355.616,340.542,341.309,354.849,323.724,354.849z M457.637,220.936c-17.585,0-31.893-14.307-31.893-31.893    c0-17.585,14.307-31.893,31.893-31.893c17.585,0,31.893,14.307,31.893,31.893C489.53,206.629,475.222,220.936,457.637,220.936z" fill="#001689"/>
 										</svg>
 										Общая динамика по активностям
@@ -50,7 +51,7 @@
 								</li>
 								<li>
 									<a href=".urgent_activities">
-										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"width="20px" viewBox="0 0 533.333 533.333" style="enable-background:new 0 0 533.333 533.333;" xml:space="preserve">
+										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="20px" height="9px" viewBox="0 0 533.333 533.333" style="enable-background:new 0 0 533.333 533.333;" xml:space="preserve">
 											<g>
 												<path d="M165.494,533.333c-35.545-73.962-16.616-116.343,10.703-156.272c29.917-43.728,37.627-87.013,37.627-87.013   s23.518,30.573,14.11,78.39c41.548-46.25,49.389-119.938,43.115-148.159c93.914,65.63,134.051,207.737,79.96,313.054   c287.695-162.776,71.562-406.339,33.934-433.775c12.543,27.435,14.922,73.88-10.416,96.42C331.635,33.333,225.583,0,225.583,0   c12.543,83.877-45.466,175.596-101.404,244.13c-1.965-33.446-4.053-56.525-21.641-88.531   C98.59,216.357,52.157,265.884,39.583,326.76C22.551,409.2,52.341,469.562,165.494,533.333z" fill="#001689"/>
 											</g>
@@ -724,8 +725,8 @@
 							</div> 
 							<!-- end item -->
 							<div class="training_plan__actions">
-								<button class="training_plan__add">Добавить</button>
-								<button class="training_plan__show_all">Все мои тренинги</button>
+								<a href="#" class="training_plan__add">Добавить</a>
+								<a href="#" class="training_plan__show_all">Все мои тренинги</a>
 							</div>
 						</div>
 						<!-- END ITEM -->
@@ -869,6 +870,28 @@
 								<!-- item -->
 								<div class="formation_ipr__row">
 									<label class="formation_ipr__checkbox">
+										<input type="checkbox" name="checkbox" class="checkbox">
+										<span class="custom_checkbox"></span>
+									</label>
+									<div class="formation_ipr__item">
+										<div class="formation_ipr__img" style="background-image: url('img/trening.png');">
+											<div class="formation_ipr__label bg_pink">
+												<img src="img/icons/audience.png" alt="icon">
+											</div>
+										</div>
+										<div class="formation_ipr__name">
+											<span>Тренинг</span>
+											<h4><span>Тренер</span> Название мероприятия</h4>
+											<p>Роман-антиутопия американской писательницы Айн Рэнд, впервые опубликованный в 1957 году. 
+											Является четвёртым и последним романом Рэнд, а также самым длинным. Рэнд считала его
+											главным произведением в своей литературной карьере.</p>
+										</div>
+									</div>
+								</div>
+								<!-- end item -->
+								<!-- item -->
+								<div class="formation_ipr__row">
+									<label class="formation_ipr__checkbox">
 										<input type="checkbox" name="checkbox" class="checkbox" checked>
 										<span class="custom_checkbox"></span>
 									</label>
@@ -984,6 +1007,28 @@
 										<div class="formation_ipr__name">
 											<span>Книга</span>
 											<h4><span>Айн Рэнд</span> Атлант расправил плечи</h4>
+											<p>Роман-антиутопия американской писательницы Айн Рэнд, впервые опубликованный в 1957 году. 
+											Является четвёртым и последним романом Рэнд, а также самым длинным. Рэнд считала его
+											главным произведением в своей литературной карьере.</p>
+										</div>
+									</div>
+								</div>
+								<!-- end item -->
+								<!-- item -->
+								<div class="formation_ipr__row">
+									<label class="formation_ipr__checkbox">
+										<input type="checkbox" name="checkbox" class="checkbox">
+										<span class="custom_checkbox"></span>
+									</label>
+									<div class="formation_ipr__item">
+										<div class="formation_ipr__img" style="background-image: url('img/trening.png');">
+											<div class="formation_ipr__label bg_pink">
+												<img src="img/icons/audience.png" alt="icon">
+											</div>
+										</div>
+										<div class="formation_ipr__name">
+											<span>Тренинг</span>
+											<h4><span>Тренер</span> Название мероприятия</h4>
 											<p>Роман-антиутопия американской писательницы Айн Рэнд, впервые опубликованный в 1957 году. 
 											Является четвёртым и последним романом Рэнд, а также самым длинным. Рэнд считала его
 											главным произведением в своей литературной карьере.</p>
@@ -1119,6 +1164,28 @@
 								<!-- item -->
 								<div class="formation_ipr__row">
 									<label class="formation_ipr__checkbox">
+										<input type="checkbox" name="checkbox" class="checkbox">
+										<span class="custom_checkbox"></span>
+									</label>
+									<div class="formation_ipr__item">
+										<div class="formation_ipr__img" style="background-image: url('img/trening.png');">
+											<div class="formation_ipr__label bg_pink">
+												<img src="img/icons/audience.png" alt="icon">
+											</div>
+										</div>
+										<div class="formation_ipr__name">
+											<span>Тренинг</span>
+											<h4><span>Тренер</span> Название мероприятия</h4>
+											<p>Роман-антиутопия американской писательницы Айн Рэнд, впервые опубликованный в 1957 году. 
+											Является четвёртым и последним романом Рэнд, а также самым длинным. Рэнд считала его
+											главным произведением в своей литературной карьере.</p>
+										</div>
+									</div>
+								</div>
+								<!-- end item -->
+								<!-- item -->
+								<div class="formation_ipr__row">
+									<label class="formation_ipr__checkbox">
 										<input type="checkbox" name="checkbox" class="checkbox" checked>
 										<span class="custom_checkbox"></span>
 									</label>
@@ -1183,7 +1250,7 @@
 								</div>
 								<div class="formation_ipr__filter">
 									<p>Выберите тип инструмента</p>
-									<select name="choose_competention" data-placeholder="Все">
+									<select name="choose_competention" data-placeholder="Внешние мероприятия">
 										<option value="1">Книги</option>
 										<option value="2">Видео</option>
 										<option value="3">Тренинги</option>
@@ -1314,6 +1381,7 @@
 	<!-- Scripts -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="libs/nativejs-select/nativejs-select.min.js"></script>
+	<script src="libs/Datedropper3-master/datedropper.min.js"></script>
 	<script src="js/common.js"></script>
 </body>
 </html>
