--- a/_1.html
+++ b/_1.html
@@ -49,12 +49,12 @@
 						<h2>Прогресс</h2>
 					</div>
 					<div class="dinamic_active_item">
-						<div class="dinamic_active_item_icon bg_blue">
+						<div class="dinamic_active_item_icon bg_indigo">
 							<img src="img/icons/play.png" alt="icon">
 						</div>
 						<div class="dinamic_active_item_progress">
 							<div class="line">
-								<div class="line_fill bg_blue" style="width: 100%;">
+								<div class="line_fill bg_indigo" style="width: 100%;">
 									<span class="procent">100%</span>
 								</div>
 							</div>
